--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-portfolio",
   "version": "0.1.0",
+  "homepage": "https://mustafadag84.github.io/react-portfolio/.",
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
